config json_form

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -15,13 +15,10 @@ security:
             pattern:  ^/api/login
             stateless: true
             anonymous: true
-            form_login:
+            json_login:
                 check_path: /api/login_check
-                username_parameter: _username
-                password_parameter: _password
                 success_handler: lexik_jwt_authentication.handler.authentication_success
                 failure_handler: lexik_jwt_authentication.handler.authentication_failure
-                require_previous_session: false
         api:
             pattern:   ^/api
             stateless: true
