--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "fabpot/goutte": "^3.2",
         "guzzlehttp/guzzle": "~6.0",
         "lexik/jwt-authentication-bundle": "^2.6",
+        "nelmio/api-doc-bundle": "^3.4",
         "nelmio/cors-bundle": "^1.5",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/apache-pack": "^1.0",
