--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -25,8 +25,14 @@ security:
             guard:
                 authenticators:
                 - lexik_jwt_authentication.jwt_token_authenticator
-
+        api_localisation:
+            pattern:   ^/user/localisation
+            stateless: true
+            guard:
+                authenticators:
+                - lexik_jwt_authentication.jwt_token_authenticator
     access_control:
     - { path: ^/api/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
     - { path: ^/user/inscription, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-    - { path: ^/api,       roles: IS_AUTHENTICATED_FULLY }
+    - { path: ^/api, roles: IS_AUTHENTICATED_FULLY }
+    - { path: ^/user/localisation, roles: IS_AUTHENTICATED_FULLY }
